GNOME Bugzilla – Bug 720123
EXTENDED roles should not be supported anymore
Last modified: 2017-10-23 10:19:57 UTC
Something that we have been debating for a long time have happened. ATK has deprecated atk_role_register (bug 720117). That means that an ATK toolkit/application shouldn't register a new role. This change should be expanded to at-spi2-core, at-spi2-atk and pyatspi2.
Created attachment 263833 [details] [review] Deprecate ATSPI_ROLE_EXTENDED
Now asking about opinions: with the previous commit we are just saying that that state is deprecated, but not removing the internal support on at-spi2-atk, at-spi2-core and atk. That means that we are encouraging to not use extended roles anymore, but if an application use register, it will still "arrive" to applications using pyatspi2. This is the conservative approach, and will give some time to apps to adapt to this change. But we could be more aggressive: * Not removing the public methods, in order to not break API/ABI * But remove internal management of extended roles. * That would mean that applications could use those methods (as the API is still there), but those roles will not be available to pyatspi2 applications. This would mean that applications would need "to hurry" as some breakage would appear. But that seems too aggressive to me. So for anyone reading this comment. Opinions?
(In reply to comment #2) > So for anyone reading this comment. Opinions? Orca right now encounters an extended role from LibreOffice Calc and needs to be able to identify this beast (the "input line") in some cases to present it; in other cases to ignore it. So I'm leaning towards the less aggressive approach and the hopes that they'll be bugged enough by the deprecation warnings from ATK. :) Once LibreOffice is free of ROLE_EXTENDED, I think we can be more aggressive. The other guilty party, if memory serves me, is evolution. At the moment, their accessibility support is so completely and utterly broken that the aggressive approach won't make a hill of beans of difference.
Created attachment 343165 [details] [review] Deprecate ATSPI_ROLE_EXTENDED Previous patch wrongly marked as deprecated ATSPI_RELATION_EXTENDED instead of ATSPI_ROLE_EXTENDED. It is likely that that one should be deprecated too, but that is a topic for a different bug.
Comment on attachment 343165 [details] [review] Deprecate ATSPI_ROLE_EXTENDED Committed and added to 3.23.4.
This should get closed shouldn't it?
(In reply to Peter Vagner from comment #6) > This should get closed shouldn't it? Yes, I think so. Thanks.