roles: EXTENDED roles are deprecated

ATK extended roles were deprecated some years ago.

https://bugzilla.gnome.org/show_bug.cgi?id=720123